; ModuleID = '/home/carl/AnghaBench/radare2/libr/crypto/p/extr_crypto_serpent_algo.c_apply_FP.c'
source_filename = "/home/carl/AnghaBench/radare2/libr/crypto/p/extr_crypto_serpent_algo.c_apply_FP.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@DW_BY_BLOCK = common dso_local global i32 0, align 4
@FPTable = common dso_local global i32* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @apply_FP(i32* %0, i32* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store i32* %0, i32** %3, align 8
  store i32* %1, i32** %4, align 8
  %7 = load i32, i32* @DW_BY_BLOCK, align 4
  %8 = zext i32 %7 to i64
  %9 = load i32, i32* @DW_BY_BLOCK, align 4
  %10 = zext i32 %9 to i64
  store i32 0, i32* %6, align 4
  br label %11

11:                                               ; preds = %50, %2
  %12 = load i32, i32* %6, align 4
  %13 = load i32, i32* @DW_BY_BLOCK, align 4
  %14 = mul nsw i32 %13, 32
  %15 = icmp slt i32 %12, %14
  br i1 %15, label %16, label %53

16:                                               ; preds = %11
  %17 = load i32*, i32** @FPTable, align 8
  %18 = load i32, i32* %6, align 4
  %19 = sext i32 %18 to i64
  %20 = getelementptr inbounds i32, i32* %17, i64 %19
  %21 = load i32, i32* %20, align 4
  store i32 %21, i32* %5, align 4
  %22 = load i32, i32* %5, align 4
  %23 = srem i32 %22, 32
  %24 = load i32*, i32** %3, align 8
  %25 = load i32, i32* %5, align 4
  %26 = sdiv i32 %25, 32
  %27 = sext i32 %26 to i64
  %28 = getelementptr inbounds i32, i32* %24, i64 %27
  %29 = load i32, i32* %28, align 4
  %30 = call i64 @get_bit(i32 %23, i32 %29)
  %31 = trunc i64 %30 to i32
  %32 = sub nsw i32 0, %31
  %33 = load i32*, i32** %4, align 8
  %34 = load i32, i32* %6, align 4
  %35 = sdiv i32 %34, 32
  %36 = sext i32 %35 to i64
  %37 = getelementptr inbounds i32, i32* %33, i64 %36
  %38 = load i32, i32* %37, align 4
  %39 = xor i32 %32, %38
  %40 = load i32, i32* %6, align 4
  %41 = shl i32 1, %40
  %42 = and i32 %39, %41
  %43 = load i32*, i32** %4, align 8
  %44 = load i32, i32* %6, align 4
  %45 = sdiv i32 %44, 32
  %46 = sext i32 %45 to i64
  %47 = getelementptr inbounds i32, i32* %43, i64 %46
  %48 = load i32, i32* %47, align 4
  %49 = xor i32 %48, %42
  store i32 %49, i32* %47, align 4
  br label %50

50:                                               ; preds = %16
  %51 = load i32, i32* %6, align 4
  %52 = add nsw i32 %51, 1
  store i32 %52, i32* %6, align 4
  br label %11

53:                                               ; preds = %11
  ret void
}

declare dso_local i64 @get_bit(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
